backend/src/main/java/com/example/petfinder/error/exception/notFound/RequestTypeNotFoundException.java
package com.example.petfinder.error.exception.notFound;

public class RequestTypeNotFoundException extends RuntimeException{

    public RequestTypeNotFoundException(Long id) {
        super("Request type id not found: " + id);
    }
}
